--- a/README
+++ b/README
@@ -5,8 +5,8 @@
 'another bat in the wall'
 
 
-# vleermuis
-https://nl.wikipedia.org/wiki/Vleermuizen
+# dwergvleermuis
+https://nl.wikipedia.org/wiki/Gewone_dwergvleermuis
 
 # daalhof
 https://nl.wikipedia.org/wiki/Daalhof
